--- a/king-faisal-db-project-1.ipynb
+++ b/king-faisal-db-project-1.ipynb
@@ -111,17 +111,32 @@
     "WHERE p1.FileNo != p2.FileNo;\n",
     "```\n"
    ]
-  }
- /image_6.png)"
-   ]
   },
   {
    "cell_type": "markdown",
-   "id": "aca1709d",
+   "id": "customqueries1",
    "metadata": {},
    "source": [
-    "### Sample Output / Visual\n",
+    "## Sample Query Descriptions\n",
     "\n",
-    "![image_10.png](extracted_images/image_10.png)"
+    "- Display patients who are younger than 18 years old.\n",
+    "- Display names of doctors in a certain department.\n",
+    "- List all doctors who have worked in room number 10.\n",
+    "- Returns all appointments scheduled for October 22nd.\n"
    ]
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
