--- a/full report.ipynb
+++ b/full report.ipynb
@@ -102,81 +102,53 @@
    "source": [
     "## Data Dictionary: Description of All Attributes\n",
     "\n",
-    "| Entity   | Attribute      | Description                                       | Data Type | Length | Nulls | Multi-Valued | Default Value | Range                | PK  |\n",
-    "|----------|----------------|-------------------------------------------------|-----------|--------|-------|--------------|---------------|----------------------|-----|\n",
-    "| Reception| ReceptionistID | Unique id number assigned to receptionist        | Char      | 8      | No    | No           |               | 0-9                  | Yes |\n",
-    "|          | FName          | Receptionist's first name                         | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|          | LName          | Receptionist's last name                          | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|          | PhoneNO        | Receptionist's phone number                       | Varchar   | 10     | Yes   | No           |               | 0-9                  |     |\n",
-    "|          | Day            | The date of the day receptionist is on duty      | Date      |        | Yes   | No           |               | 01/01/2024 - 31/12/2024 |     |\n",
-    "|          | Hours          | Receptionist's working hours                      | Time      |        | Yes   | No           |               | 12:00am - 11:59pm    |     |\n",
+    "### Reception\n",
     "\n",
-    "| Patient  | FileNo         | Unique number assigned to patient                 | Char      | 6      | No    | No           |               | 0-9                  | Yes |\n",
-    "|          | FName          | Patient's first name                              | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|          | LName          | Patient's last name                               | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|          | Age            | Patient's age                                    | Int       |        | Yes   | No           |               |                      |     |\n",
-    "|          | PhoneNO        | Patient's phone number                            | Varchar   | 10     | Yes   | No           |               | 0-9                  |     |\n",
-    "|          | MedicalRecord  | Record contains information about patient's previous visits | Varchar   | 100    | Yes   | No           |               |                      |     |\n",
+    "| Entity    | Attribute      | Description                               | Data Type | Length | Nulls | Multi-Valued | Default Value | Range                  | PK  |\n",
+    "|-----------|----------------|-------------------------------------------|-----------|--------|-------|--------------|---------------|------------------------|-----|\n",
+    "| Reception | ReceptionistID | Unique id number assigned to receptionist | Char      | 8      | No    | No           |               | 0-9                    | Yes |\n",
+    "|           | FName          | Receptionist's first name                  | Varchar   | 50     | Yes   | No           |               |                        |     |\n",
+    "|           | LName          | Receptionist's last name                   | Varchar   | 50     | Yes   | No           |               |                        |     |\n",
+    "|           | PhoneNO        | Receptionist's phone number                | Varchar   | 10     | Yes   | No           |               | 0-9                    |     |\n",
+    "|           | Day            | The date the receptionist is on duty      | Date      |        | Yes   | No           |               | 01/01/2024 - 31/12/2024 |     |\n",
+    "|           | Hours          | Receptionist's working hours               | Time      |        | Yes   | No           |               | 12:00am - 11:59pm      |     |\n",
     "\n",
-    "| Appointment | AppNo        | Unique number assigned to appointment             | Char      | 6      | No    | No           |               | 0-9                  | Yes |\n",
-    "|            | Date         | Appointment's date                                | Date      |        | Yes   | No           |               | 01/01/2024 - 31/12/2024 |     |\n",
-    "|            | Time         | Appointment time in hours                         | Time      |        | Yes   | No           |               | 12:00am - 11:59pm    |     |\n",
-    "|            | Status       | Appointment's visit status                        | Varchar   | 10     | Yes   | No           | 'Confirmed', 'pending', or 'canceled' |     |\n",
+    "---\n",
     "\n",
-    "| Doctor    | DoctorID       | Unique id number assigned to doctor               | Char      | 8      | No    | No           |               | 0-9                  | Yes |\n",
-    "|           | FName         | Doctor's first name                               | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|           | LName         | Doctor's last name                                | Varchar   | 50     | Yes   | No           |               |                      |     |\n",
-    "|           | RoomNO        | Doctor's room number in the clinic                | Varchar   | 2      | Yes   | No           |               | 1-50                 |     |\n",
-    "|           | PhoneNO       | Doctor's phone number                             | Varchar   | 10     | Yes   | No           |               | 0-9                  |     |\n",
-    "|           | Department    | Doctor's specialty                               | Varchar   | 20     | Yes   | No           |               |                      |     |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cc10168",
-   "metadata": {},
-   "source": [
-    "## Sample Queries\n",
+    "### Patient\n",
     "\n",
-    "```sql\n",
-    "-- 1. Display patients who are younger than 18\n",
-    "SELECT * FROM Patient WHERE Age < 18;\n",
+    "| Entity  | Attribute      | Description                                       | Data Type | Length | Nulls | Multi-Valued | Default Value | Range | PK  |\n",
+    "|---------|----------------|-------------------------------------------------|-----------|--------|-------|--------------|---------------|-------|-----|\n",
+    "| Patient | FileNo         | Unique number assigned to patient                | Char      | 6      | No    | No           |               | 0-9   | Yes |\n",
+    "|         | FName          | Patient's first name                             | Varchar   | 50     | Yes   | No           |               |       |     |\n",
+    "|         | LName          | Patient's last name                              | Varchar   | 50     | Yes   | No           |               |       |     |\n",
+    "|         | Age            | Patient's age                                   | Int       |        | Yes   | No           |               |       |     |\n",
+    "|         | PhoneNO        | Patient's phone number                           | Varchar   | 10     | Yes   | No           |               | 0-9   |     |\n",
+    "|         | MedicalRecord  | Record containing information about patient's previous visits | Varchar   | 100    | Yes   | No           |               |       |     |\n",
     "\n",
-    "-- 2. Display canceled appointments\n",
-    "SELECT * FROM Appointment WHERE Status = 'Canceled';\n",
+    "---\n",
     "\n",
-    "-- 3. Display doctors in a specific department (example: Cardiology)\n",
-    "SELECT FName, LName FROM Doctor WHERE Department = 'Cardiology';\n",
+    "### Appointment\n",
     "\n",
-    "-- 4. List all doctors who have worked in room number 10\n",
-    "SELECT * FROM Doctor WHERE RoomNO = '10';\n",
+    "| Entity      | Attribute | Description                  | Data Type | Length | Nulls | Multi-Valued | Default Value                  | Range                  | PK  |\n",
+    "|-------------|-----------|------------------------------|-----------|--------|-------|--------------|-------------------------------|------------------------|-----|\n",
+    "| Appointment | AppNo     | Unique number assigned to appointment | Char      | 6      | No    | No           |                               | 0-9                    | Yes |\n",
+    "|             | Date      | Appointment's date           | Date      |        | Yes   | No           |                               | 01/01/2024 - 31/12/2024 |     |\n",
+    "|             | Time      | Appointment time in hours    | Time      |        | Yes   | No           |                               | 12:00am - 11:59pm      |     |\n",
+    "|             | Status    | Appointment's visit status   | Varchar   | 10     | Yes   | No           | 'Confirmed', 'pending', 'canceled' |                        |     |\n",
     "\n",
-    "-- 5. Returns all appointments scheduled for October 22nd\n",
-    "SELECT * FROM Appointment WHERE Date = '2024-10-22';\n",
+    "---\n",
     "\n",
-    "-- 6. Display patients treated by the same doctor\n",
-    "SELECT DISTINCT p1.FName AS Patient1, p2.FName AS Patient2, a1.DoctorID\n",
-    "FROM Appointment a1\n",
-    "JOIN Appointment a2 ON a1.DoctorID = a2.DoctorID AND a1.AppNO != a2.AppNO\n",
-    "JOIN Patient p1 ON a1.FileNO = p1.FileNO\n",
-    "JOIN Patient p2 ON a2.FileNO = p2.FileNO\n",
-    "WHERE p1.FileNO != p2.FileNO;\n",
+    "### Doctor\n",
     "\n",
-    "-- 7. Display receptionists working a specific shift (example: Hours = '09:00:00')\n",
-    "SELECT * FROM Reception WHERE Hours = '09:00:00';\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "customqueries1",
-   "metadata": {},
-   "source": [
-    "## Sample Query Descriptions\n",
-    "\n",
-    "- Display patients who are younger than 18 years old.\n",
-    "- Display names of doctors in a certain department.\n",
-    "- List all doctors who have worked in room number 10.\n",
-    "- Returns all appointments scheduled for October 22nd.\n"
+    "| Entity | Attribute  | Description                       | Data Type | Length | Nulls | Multi-Valued | Default Value | Range | PK  |\n",
+    "|--------|------------|---------------------------------|-----------|--------|-------|--------------|---------------|-------|-----|\n",
+    "| Doctor | DoctorID   | Unique id number assigned to doctor | Char      | 8      | No    | No           |               | 0-9   | Yes |\n",
+    "|        | FName      | Doctor's first name              | Varchar   | 50     | Yes   | No           |               |       |     |\n",
+    "|        | LName      | Doctor's last name               | Varchar   | 50     | Yes   | No           |               |       |     |\n",
+    "|        | RoomNO     | Doctor's room number in the clinic | Varchar   | 2      | Yes   | No           |               | 1-50  |     |\n",
+    "|        | PhoneNO    | Doctor's phone number            | Varchar   | 10     | Yes   | No           |               | 0-9   |     |\n",
+    "|        | Department | Doctor's specialty               | Varchar   | 20     | Yes   | No           |               |       |     |"
    ]
   }
  ],
