--- a/full report.ipynb
+++ b/full report.ipynb
@@ -150,6 +150,55 @@
     "|        | PhoneNO    | Doctor's phone number            | Varchar   | 10     | Yes   | No           |               | 0-9   |     |\n",
     "|        | Department | Doctor's specialty               | Varchar   | 20     | Yes   | No           |               |       |     |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cc10168",
+   "metadata": {},
+   "source": [
+    "## Sample Queries\n",
+    "\n",
+    "```sql\n",
+    "-- 1. Display patients who are younger than 18\n",
+    "SELECT * FROM Patient WHERE Age < 18;\n",
+    "\n",
+    "-- 2. Display canceled appointments\n",
+    "SELECT * FROM Appointment WHERE Status = 'Canceled';\n",
+    "\n",
+    "-- 3. Display doctors in a specific department (example: Cardiology)\n",
+    "SELECT FName, LName FROM Doctor WHERE Department = 'Cardiology';\n",
+    "\n",
+    "-- 4. List all doctors who have worked in room number 10\n",
+    "SELECT * FROM Doctor WHERE RoomNO = '10';\n",
+    "\n",
+    "-- 5. Returns all appointments scheduled for October 22nd\n",
+    "SELECT * FROM Appointment WHERE Date = '2024-10-22';\n",
+    "\n",
+    "-- 6. Display patients treated by the same doctor\n",
+    "SELECT DISTINCT p1.FName AS Patient1, p2.FName AS Patient2, a1.DoctorID\n",
+    "FROM Appointment a1\n",
+    "JOIN Appointment a2 ON a1.DoctorID = a2.DoctorID AND a1.AppNO != a2.AppNO\n",
+    "JOIN Patient p1 ON a1.FileNO = p1.FileNO\n",
+    "JOIN Patient p2 ON a2.FileNO = p2.FileNO\n",
+    "WHERE p1.FileNO != p2.FileNO;\n",
+    "\n",
+    "-- 7. Display receptionists working a specific shift (example: Hours = '09:00:00')\n",
+    "SELECT * FROM Reception WHERE Hours = '09:00:00';\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "customqueries1",
+   "metadata": {},
+   "source": [
+    "## Sample Query Descriptions\n",
+    "\n",
+    "- Display patients who are younger than 18 years old.\n",
+    "- Display names of doctors in a certain department.\n",
+    "- List all doctors who have worked in room number 10.\n",
+    "- Returns all appointments scheduled for October 22nd.\n"
+   ]
   }
  ],
  "metadata": {
@@ -166,3 +215,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
